<resources>
    <string name="app_name">Boats and Bombs</string>
    <string name="action_settings">Settings</string>
    <string name="border">Border</string>
    <string name="shape">Shape</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="color">Color</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="defaultColor">Default</string>
    <string name="default_score">Score: 0</string>
    <string name="credits_text">Credits</string>
    <string name="highscores_text">High Scores</string>
    <string name="start_game_text">Start Game</string>
    <string name="boats_and_bombs_text">Boats and Bombs</string>
    <string name="your_score_text">Your Score</string>
    <string name="high_score_text_end_game">High Score:</string>
    <string name="main_menu_button_text">Main Menu</string>
    <string name="play_again_button_text">Play Again</string>
    <string name="game_over_text">Game Over</string>
    <string name="reset">Reset</string>
    <string name="high_scores">High Scores</string>
</resources>
