<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_over_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/game_over"
        android:layout_width="match_parent"
        android:layout_height="@dimen/game_over_height"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/game_over_text"
        android:textColor="#996600"
        android:textIsSelectable="false"
        android:textSize="@dimen/game_over_text_size"/>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/play_again_button_text"/>

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/main_menu_button_text"/>

    <TextView
        android:id="@+id/high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/high_score_text_end_game"
        android:textColor="#996600"
        android:textSize="@dimen/high_score_text_size"/>

    <TextView
        android:id="@+id/current_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/your_score_text"
        android:textColor="#996600"
        android:textSize="@dimen/current_score_text_size"/>

</LinearLayout>