<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/game_over_background"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boats_and_bombs_text"
        android:textSize="@dimen/title_text_size"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game_text"
        android:textSize="@dimen/start_game_text_size"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/scores_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscores_text"
        android:textSize="@dimen/highscores_text_size"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/credits_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits_text"
        android:textSize="@dimen/credits_text_size"
        android:layout_gravity="center"/>
</LinearLayout>